Stop odin logo from growing beyond container when using align-items

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body {
     display: flex;
 }
 
-/* Left section of website */
+/* Left section of page */
 
 .left-section {
     width: 40%;
@@ -63,7 +63,7 @@ body {
 .logo {
     display: flex;
     justify-content: center;
-    /* align-items: center; */
+    align-items: center;
     width: auto;
     height: 15%;
     padding: 10px 0px;
@@ -77,6 +77,13 @@ h1 {
     font-family: "castoro_titlingregular", "Times New Roman", Times, serif;
     color: white;
 }
+
+#odin-logo {
+    max-height: 100%;
+    max-width: 100%;
+}
+
+/* Right section of page */
 
 .right-section {
     display: flex;
